<resources>
    <string name="app_name">DurStep</string>

    <string name="language">हिन</string>

    <!--intro activity-->
    <string name="intro_welcome">Welcome</string>
    <string name="intro_Login">Login</string>
    <string name="intro_SignUp">SignUp</string>
    <string name="intro_welcome_message">Serving At Your Doorstep</string>

    <!--login activity-->
    <string name="login_username_hint">Mobile Number</string>
    <string name="login_password_hint">Password</string>

    <!--signUp activity-->
    <string name="signUp_confirm_password_hint">Confirm Password</string>
    <string name="username_error">Enter 10 digit mobile number</string>
    <string name="password_short_error">Length must be >= 8</string>
    <string name="password_match_error">Password doesn\'t match</string>
    <string name="already_account_text">Already have an account ?</string>

    <!--main activity-->
    <string name="title_home">Home</string>
    <string name="bt_new_order">New Order</string>
    <string name="bt_all_order">All Orders</string>
    <string name="bt_profile">Profile</string>
    <string name="bt_scan">Scan Qr</string>
    <string name="bt_show_qr">Show Qr</string>
    <string name="clients">Clients</string>
    <string name="bt_logout">Log Out</string>
    <string name="scan_qr_info">Scan Qr To Receive Order</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="display_name">Display Name</string>
    <string name="edit"><u>Edit</u></string>
    <string name="no_pending_orders">No Pending Orders</string>
    <string name="admin_text">Admin</string>
    <string name="reEnter_pwd">Enter old password</string>
    <string name="choose_delivering_amount">Choose amount of milk you are delivering</string>
    <string name="your_order_has_been_placed">Your order has been placed.</string>
    <string name="server_error">Server Error</string>
    <string name="cancel">Cancel</string>

    <!--profile layout-->
    <string name="profile_new_name">New name</string>
    <string name="profile_new_number">New number</string>
    <string name="profile_new_password">New password</string>
    <string name="profile_error_new_name">Name can\'t be empty</string>
    <string name="profile_updated">Profile Updated</string>

    <string name="profile_no_change">No change</string>
    <string name="profile_authenticate">Authenticate</string>
    <string name="profile_reAuth_hint">Enter Old Password</string>
    <string name="wrong_pwd">Wrong password</string>
    <string name="wrong_credential">Wrong credential</string>


    <!--transition from intro to login-->
    <string name="intro_to_login_button" translatable="false">introToLoginButton</string>
    <string name="intro_to_signUp_button" translatable="false">introToSignUpButton</string>
    <string name="intro_to_login_header" translatable="false">introToLoginHeader</string>

    <!--pending request list item-->
    <string name="litre_abbreviation">L</string>

    <!--dialog_layout-->
    <string name="no_order">No orders yet</string>

    <string name="choose_pending_order">Select Order To Receive</string>
    <string name="invalid_pending_order">Invalid Order</string>

    <!--order activity-->
    <string name="enter_keyword_to_search">Enter keyword to search</string>

    <string name="filter_option">Filter options</string>

    <string name="filter_option_show_all">All</string>
    <string name="filter_option_show_pending">Pending</string>
    <string name="filter_option_show_delivered">Delivered</string>
    <string name="filter_option_show_canceled_by_admin">Canceled by admin</string>
    <string name="filter_option_show_canceled_by_client">Canceled by client</string>

    <string name="apply">Apply</string>

    <string name="ok">Ok</string>

    <string name="order">Orders</string>

    <!--detail view of order-->
    <string name="order_by">By: </string>
    <string name="order_time">Time: </string>
    <string name="order_date">Date: </string>
    <string name="order_id">Id: </string>
    <string name="order_status">Status: </string>
    <string name="order_amount">Amount: </string>


    <!--view of user for manage section for admin-->
    <string name="total_order">Total Orders</string>
    <string name="name">Name: </string>
    <string name="number">Number: </string>
    <string name="distributor">Distributor</string>
    <string name="client">Client</string>
    <string name="say_hello_to">Say hello</string>
    <string name="send_message">Send message</string>
    <string name="message_empty_error">Message can\'t be empty</string>
    <string name="client_to_distributor">Give distributor access to the user?</string>
    <string name="distributor_to_client">Revoke distributor access from the user?</string>

    <string-array name="litres">
        <!--<item name="zero">0</item>-->
        <item name="zero.five">0.5 Litres</item>
        <item name="one">1 Litres</item>
        <item name="one.five">1.5 Litres</item>
        <item name="two">2 Litres</item>
        <item name="two.five">2.5 Litres</item>
        <item name="three">3 Litres</item>
        <item name="three.five">3.5 Litres</item>
        <item name="four">4 Litres</item>
        <item name="four.five">4.5 Litres</item>
        <item name="five">5 Litres</item>
    </string-array>

    <string-array name="order_options">
        <item name="oo_pending">Mark as pending</item>
        <item name="oo_delivered">Mark as delivered</item>
        <item name="oo_cancel">Mark as cancel</item>
    </string-array>

    <string name="cancel_order">Cancel Order ?</string>

    <string name="delete">Delete</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>

    <string name="internet_error">You are offline</string>

    <string name="delivered_by">Delivered By: </string>

    <string name="give_feedback">Please give feedback</string>
    <string name="later">Later</string>
    <string name="submit_feedback">Submit Feedback</string>

    <string name="default_notification_channel_id" translatable="false">1472</string>

    <!-- bottom app bar menu-->
    <string name="menu_home">Home</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about_us">About Us</string>

    <!--home fragment-->
    <string name="no_subs_message">You haven\'t subscribed to any service.\nclick + add button</string>
    <string name="delivery_time">Delivery time hh:mm</string>
    <string name="new_subs_alert_title">Enter time and litres to start a new subscription</string>
    <string name="invalid_time_format">Invalid time format</string>

    <string name="subs_monthly_rate">Monthly Expenditure: Rs.</string>
    <string name="subs_delivery_time">Delivery Time: </string>

    <string name="subs_menu_track">Track</string>
    <string name="subs_menu_add_instruction">Add Instruction</string>

    <string name="track_inactive_message">Delivery not on way</string>
    <string name="track_info">Track info</string>

    <!--distributor home fragment-->
    <string name="no_current_delivery">No Active Delivery\nClick here to start new delivery</string>
    <string name="update">Update</string>
    <string name="modify">Modify</string>
    <string name="start">Start</string>
    <string name="total">Total: </string>
    <string name="pending">Pending: </string>
    <string name="delivered">Delivered: </string>
    <string name="subscriptions">Subscriptions</string>

    <!--new delivery activity-->
    <string name="enter_name_or_number_to_search">Enter Name/Number to search</string>
    <string name="confirm_delivery">Confirm Delivery</string>

    <!--stats fragment-->
    <string name="total_consumption">Consumption</string>
    <string name="total_amount_due">Amount Due</string>
    <string name="total_amount_paid">Amount Paid</string>

    <string name="turn_on_location">Permission Not Given</string>
    <string name="client_location_error">Turn On Your Location</string>

    <string name="menu_make_client">Make Client</string>
    <string name="menu_make_distributor">Make Distributor</string>
    <string name="menu_show_stats">Show Stats</string>
    <string name="menu_schedule_delivery">Schedule Delivery</string>

    <!--distributor stats fragment-->
    <string name="allotted_delivery">Allotted Delivery</string>
    <string name="litre_delivered">Litre Delivered</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="pending_delivery">Pending Delivery</string>

    <!--admin stats fragment-->
    <string name="payments">Payments</string>
    <string name="total_payment">Total Payment</string>

    <string name="payment">Payment</string>

    <!--new payment dialog-->
    <string name="select_users">Select User</string>
    <string name="invalid_amount">Invalid Amount</string>

    <!--month-->
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>

</resources>